# Scanly

./: CMakeLists.txt  README.md
build-desktop/: CMakeCache.txt  Makefile  cmake_install.cmake  scanly_qmltyperegistrations.cpp
build-desktop/.qt/: .qmlls.build.ini  .qmlls.build.ini.part  QtDeploySupport.cmake  QtDeployTargets.cmake  scanly_qml.cmake  scanly_res.cmake
build-desktop/.qt/deploy_qml_imports/: scanly.cmake
build-desktop/.qt/qml_imports/: scanly_build.cmake  scanly_build.rsp  scanly_conf.rsp
build-desktop/.qt/rcc/: qmake_app_scanly.qrc  qrc_qmake_app_scanly.cpp  qrc_scanly_raw_qml_0.cpp  scanly_raw_qml_0.qrc
build-desktop/.rcc/qmlcache/: all_aotstats.aotstatslist  module_scanly.aotstatslist  scanly_qml_loader_file_list.rsp  scanly_qmlcache_loader.cpp
build-desktop/.rcc/qmllint/: scanly.rsp  scanly_json.rsp  scanly_module.rsp
build-desktop/app/scanly/: qmldir  scanly_qml_module_dir_map.qrc
build-desktop/meta_types/: qt6scanly_metatypes.json.gen  scanly_json_file_list.txt  scanly_json_file_list.txt.timestamp
build-desktop/qmltypes/: scanly_foreign_types.txt
build-desktop/scanly_autogen/: deps  moc_predefs.h
build-desktop/scanly_autogen/UVLADIE3JM/: moc_chaptermodel.cpp  moc_chaptermodel.cpp.d  moc_chaptermodel.cpp.json  moc_devicestatus.cpp  moc_devicestatus.cpp.d  moc_devicestatus.cpp.json  moc_downloadmanager.cpp  moc_downloadmanager.cpp.d  moc_downloadmanager.cpp.json  moc_epaperhints.cpp  moc_epaperhints.cpp.d  moc_epaperhints.cpp.json  moc_imagecache.cpp  moc_imagecache.cpp.d  moc_imagecache.cpp.json  moc_lelscansource.cpp  moc_lelscansource.cpp.d  moc_lelscansource.cpp.json  moc_librarystore.cpp  moc_librarystore.cpp.d  moc_librarystore.cpp.json  moc_mangadexclient.cpp  moc_mangadexclient.cpp.d  moc_mangadexclient.cpp.json  moc_mangametasource.cpp  moc_mangametasource.cpp.d  moc_mangametasource.cpp.json  moc_mangasourcerouter.cpp  moc_mangasourcerouter.cpp.d  moc_mangasourcerouter.cpp.json  moc_pageimagecache.cpp  moc_pageimagecache.cpp.d  moc_pageimagecache.cpp.json  moc_searchmodel.cpp  moc_searchmodel.cpp.d  moc_searchmodel.cpp.json  moc_settingsstore.cpp  moc_settingsstore.cpp.d  moc_settingsstore.cpp.json  (+6 more)
build-rm/: CMakeCache.txt  Makefile  cmake_install.cmake
build-rm/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake  scanly_qml.cmake  scanly_res.cmake
build-rm/meta_types/: qt6scanly_metatypes.json.gen  qt6scanly_release_metatypes.json  scanly_json_file_list.txt  scanly_json_file_list.txt.timestamp
build-rm/qmltypes/: scanly_foreign_types.txt
build-rm/scanly_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
docker/: Dockerfile
packaging/appload/: README.md  build-linuxfb.sh  deploy-appload.sh
packaging/appload/build-linuxfb/: CMakeLists.txt  qlinuxfb-qtfb-update.patch
packaging/macos-installer/: Package.swift  README.md  build-app.sh
qml/: LibraryPage.qml  MangaPage.qml  ReaderPage.qml  SettingsPage.qml
src/: chaptermodel.cpp  chaptermodel.h  devicestatus.cpp  devicestatus.h  downloadmanager.cpp  downloadmanager.h  epaperhints.cpp  epaperhints.h  imagecache.cpp  imagecache.h  librarystore.cpp  librarystore.h  main.cpp  mangametasource.cpp  mangametasource.h  mangasourcerouter.cpp  mangasourcerouter.h  pageimagecache.cpp  pageimagecache.h  searchmodel.cpp  searchmodel.h  settingsstore.cpp  settingsstore.h  sushiscansource.cpp  sushiscansource.h  webpdecode.cpp  webpdecode.h  weebcentralsource.cpp  weebcentralsource.h
(+443 files in other folders)
